--- a/02_模板语法.html
+++ b/02_模板语法.html
@@ -22,7 +22,7 @@
             el:'#app',
             data:{
                 msg:'I will back!',
-                url:''
+                url:'i love guigu'
             }
         })
     </script>
